# pipestruct

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
example/my_data_pipeline/: data.csv  definition.yml  pipeline.py
examples/my_data_pipeline/: pipeline.py
pipestruct/: __init__.py  pipedef.py  pipeline.py  transformation.py
test/: test_pipestruct.py
