[project]
name = "pipestruct"
version = "0.0.1"
description = "Lightweight structural framework for very simple pipelines."
authors = [
    { name = "Adriano Oliveira" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest==8.*",
    "pytest-cov",
]